--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/__Game/Main.Main
+EditorStartupMap=/Game/__Game/Main.Main
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
